# week-4-exercises

./: README.md
Animals/: CMakeLists.txt
Animals/include/: animalClasses.h
Animals/src/: animalClasses.cpp  animalsSpeak.cpp
DimensionalAnalysis/: physical_quantities_dimensional.cpp
Templates/include/: Fraction.h  MatrixTemplate.h  Polynomial.h
Templates/source/: Fraction.cpp  Polynomial.cpp  Templates.cpp
